Adiciona novas páginas e imagens do projeto 'Inclusão Digital'

--- a/pages/projeto_que_brilhou.html
+++ b/pages/projeto_que_brilhou.html
@@ -1,82 +1,118 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/artigos.css">
-    <title>O Projeto Que Brilhou</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../styles/artigos.css">
+  <title>O Projeto Que Brilhou</title>
 </head>
 <body>
-    <header>
-        <a href="../index.html#projeto" class="button-voltar">
-            <i class="bi bi-caret-left-fill"></i> 
-            <p>voltar</p>
-        </a>
-        <img src="../img/logo_site_branca.png" alt="Logo Inclusão Digital">
-    </header>
+  <header>
+    <a href="../index.html#projeto" class="button-voltar">
+      <i class="bi bi-caret-left-fill"></i>
+      <p>voltar</p>
+    </a>
+    <img src="../img/logo_site_branca.png" alt="Logo Inclusão Digital">
+  </header>
 
-    <main class="artigo-principal-section">
-        <div class="artigo-principal-cabecalho">
-            <h1 class="artigo-principal-titulo">
-                O Projeto Que Brilhou
-            </h1>
+  <main class="artigo-principal-section">
+ 
+    <div class="artigo-principal-cabecalho">
+      <h1 class="artigo-principal-titulo">O Projeto Que Brilhou</h1>
 
-            <p class="artigo-principal-subtitulo">
-                O projeto “Aplicabilidade de Ferramentas Digitais” levou inclusão, aprendizado e transformação à comunidade através da tecnologia. Mais que uma ação técnica, foi uma experiência de impacto social e humano, promovendo o acesso ao conhecimento digital.
-            </p>
+      <p class="artigo-principal-subtitulo">
+        O projeto <strong>“Aplicabilidade de Ferramentas Digitais”</strong> teve como objetivo promover a <strong>inclusão digital</strong> e o <strong>desenvolvimento de habilidades tecnológicas</strong> entre jovens e adultos da comunidade atendida pela Biblioteca Júlio Santiago, no <strong>COMPAZ Miguel Arraes</strong>.
+      </p>
 
-            <div class="artigo-principal-info">
-                <span>Atualizado em: <strong>09 de novembro de 2025</strong></span>
-                <span><i class="bi bi-stopwatch"></i> Tempo de leitura: <strong>8 minutos</strong></span>
-                <span>Escrito por: <strong>Equipe ETEPAC</strong></span>
-            </div>
+      <div class="artigo-principal-info">
+        <span>Publicado em: <strong>13 de novembro de 2025</strong></span>
+        <span><i class="bi bi-stopwatch"></i> Leitura: <strong>8 minutos</strong></span>
+        <span>Por: <strong>Equipe ETEPAC</strong></span>
+      </div>
 
-            <div class="artigo-principal-audio">
-                <button class="artigo-principal-play">▶</button>
-                <span>Ouvir artigo</span>
-                <input type="range" class="artigo-principal-barra" value="0">
-                <span class="artigo-principal-tempo">00:00</span>
-            </div>
+      <div class="artigo-principal-audio">
+        <button class="artigo-principal-play">▶</button>
+        <span>Ouvir artigo</span>
+        <input type="range" class="artigo-principal-barra" value="0">
+        <span class="artigo-principal-tempo">00:00</span>
+      </div>
 
-            <img src="../img/sobre_projeto.png" alt="Imagem ilustrativa do projeto" class="artigo-principal-imagem">
-        </div>
+      <img src="../img/projeto_que_brilhou.jpeg" alt="Imagem do projeto que brilhou" class="artigo-principal-imagem sombra" style="width:100%; max-width:950px; height:auto; display:block; margin:25px auto; border-radius:12px; object-fit:contain; background:#f8f8f8;">
+    </div>
 
-        <div class="artigo-principal-corpo">
-            <h2>O propósito do projeto</h2>
-            <p>
-                O projeto <strong>“Aplicabilidade de Ferramentas Digitais”</strong>, desenvolvido por estudantes dos cursos técnicos da <strong>ETEPAC</strong> em parceria com o <strong>COMPAZ Miguel Arraes</strong>, teve como principal objetivo promover a inclusão digital e o desenvolvimento de habilidades tecnológicas entre jovens e adultos da comunidade local.
-            </p>
-            <p>
-                A iniciativa proporcionou aos participantes o contato com ferramentas tecnológicas, ampliando seus horizontes e contribuindo para a formação de cidadãos mais preparados para o mundo digital.
-            </p>
 
-            <h2>Equipe e interdisciplinaridade</h2>
-            <p>
-                O projeto contou com a participação de <strong>nove bolsistas</strong> de cursos distintos — Administração, Design Gráfico, Logística, Tradução e Interpretação de Libras e Desenvolvimento de Sistemas. Essa diversidade permitiu uma rica troca de experiências e fortaleceu o trabalho colaborativo.
-            </p>
-            <p>
-                A interdisciplinaridade foi um dos pilares do projeto, unindo diferentes áreas do conhecimento para alcançar um mesmo objetivo: tornar a tecnologia mais acessível e útil para a comunidade.
-            </p>
+    <div class="artigo-principal-corpo">
 
-            <h2>Impactos e resultados alcançados</h2>
-            <p>
-                Durante a execução, os bolsistas não apenas ensinaram, mas também aprenderam. Houve crescimento pessoal e profissional, desenvolvimento de competências e fortalecimento da comunicação e do trabalho em equipe.
-            </p>
-            <p>
-                A diversidade dos alunos que participaram do curso refletiu a importância do projeto. Dos 21 alunos concluintes, <strong>57,1% eram mulheres e 42,9% homens</strong>, mostrando a participação equilibrada e inclusiva.
-            </p>
-            <p>
-                O curso também destacou o uso de temas atuais, como <strong>inteligência artificial</strong> e <strong>internet das coisas</strong>, promovendo uma formação moderna e alinhada com as transformações digitais.
-            </p>
+      <section class="bloco destaque">
+        <h2>🌟 O Propósito do Projeto</h2>
+        <p>
+          O projeto <strong>“Aplicabilidade de Ferramentas Digitais”</strong>, desenvolvido por estudantes em EAD da <strong>Escola Técnica Professor Antônio Carlos Gomes da Costa (ETEPAC)</strong>, uniu educação e tecnologia para transformar realidades.
+        </p>
+        <p>
+          Aplicado como extensão junto aos usuários da <strong>Biblioteca Júlio Santiago</strong>, no <strong>COMPAZ Miguel Arraes</strong>, teve como foco oferecer <strong>conhecimento prático</strong> e <strong>inclusão digital</strong> a jovens e adultos.
+        </p>
+        <img src="../img/participantes_em_atividade.jpeg" alt="Participantes do projeto em atividade" class="imagem-centro sombra">
+      </section>
 
-            <h2>Legado e continuidade</h2>
-            <p>
-                O projeto “O Projeto Que Brilhou” deixou marcas significativas. Mais do que um curso, foi uma ponte entre o aprendizado técnico e o desenvolvimento humano. 
-            </p>
-            <p>
-                A experiência vivida pelos estudantes da ETEPAC e pelos alunos do COMPAZ serviu como inspiração para novas iniciativas de extensão e inclusão, reforçando a importância da educação tecnológica como ferramenta de transformação social.
-            </p>
-        </div>
-    </main>
+      <section class="bloco">
+        <h2>🤝 Parceria ETEPAC + COMPAZ</h2>
+        <p>
+          A iniciativa foi possível graças à colaboração entre duas instituições comprometidas com a <strong>educação e o desenvolvimento social</strong>: a ETEPAC, referência em ensino técnico à distância, e o COMPAZ, símbolo de cidadania e convivência comunitária.
+        </p>
+        <p>
+          Essa união demonstrou o poder da <strong>educação aplicada</strong> e da <strong>responsabilidade social</strong> em promover transformação e oportunidade.
+        </p>
+        <img src="../img/parceria_etepac_compaz.jpg" alt="Equipe ETEPAC e comunidade no COMPAZ" class="imagem-centro borda-suave">
+      </section>
+
+      <section class="bloco destaque">
+        <h2>🎓 Quem Fez Parte?</h2>
+        <p>
+          O projeto contou com <strong>nove bolsistas</strong> dos cursos de:
+        </p>
+        <ul class="topicos check">
+          <li>Administração</li>
+          <li>Design Gráfico</li>
+          <li>Logística</li>
+          <li>Tradução e Interpretação de Libras</li>
+          <li>Desenvolvimento de Sistemas</li>
+        </ul>
+        <p>
+          Essa diversidade fortaleceu a interdisciplinaridade — um dos grandes diferenciais do projeto — permitindo que diferentes perspectivas se unissem em torno de um único propósito: <strong>ensinar para transformar</strong>.
+        </p>
+        <img src="../img/bolsistas_trabalho.jpg" alt="Bolsistas trabalhando no projeto" class="imagem-centro sombra">
+      </section>
+
+      <section class="bloco">
+        <h2>📈 Resultados e Aprendizados</h2>
+        <p>
+          A troca de experiências entre bolsistas e alunos foi enriquecedora. Durante o curso, observou-se um <strong>crescimento mútuo</strong> — tanto dos estudantes instrutores quanto dos participantes do COMPAZ.
+        </p>
+        <p>
+          Dos <strong>21 alunos</strong> que concluíram o curso:
+        </p>
+        <ul class="topicos">
+          <li><strong>57,1%</strong> eram mulheres (12 alunas);</li>
+          <li><strong>42,9%</strong> eram homens (9 alunos).</li>
+        </ul>
+        <p>
+          A classificação etária também demonstrou a <strong>diversidade de faixas etárias</strong> e perfis interessados em aprimorar habilidades digitais.
+        </p>
+ <div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; margin: 30px 0;">
+  <img src="../img/grafico_genero.png" alt="Gráfico de gênero" style="width: 420px; border-radius: 14px;">
+  <img src="../img/grafico_idade.png" alt="Gráfico de faixa etária" style="width: 420px; border-radius: 14px;">
+</div>
+      <section class="bloco destaque">
+        <h2>💻 Um Novo Horizonte</h2>
+        <p>
+          O projeto proporcionou uma <strong>trilha de aprendizado contínuo</strong>, abordando desde conceitos básicos até temas modernos como <strong>Inteligência Artificial</strong> e <strong>Internet das Coisas (IoT)</strong>.
+        </p>
+        <p>
+          Essa abordagem formou cidadãos mais preparados para o futuro digital, capazes de aplicar o conhecimento adquirido tanto em suas <strong>vidas profissionais</strong> quanto em <strong>atividades cotidianas</strong>.
+        </p>
+        <img src="../img/aula_em_andamento.jpeg" alt="Aula de inclusão digital em andamento" class="imagem-centro sombra">
+      </section>
+     </div>
+  </main>
 </body>
 </html>
