feat: box descrição bolsistas

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h1>Projeto <span>Inclusão Digital</span></h1>
                 <p>Promovendo inovação e habilidades tecnológicas aos usuários da biblioteca do COMPAZ Miguel Arraes, através de estudantes da ETEPAC</p>
             </div>
-            <img src="img/banner_inclusao_digital(1920x1220).png" alt="">
+            <img src="img/banner_inclusao_digital.png" alt="">
         </section>
 
         <section class="containers artigos-relacionados-section" id="artigos">
@@ -200,11 +200,7 @@
             </div>
         </section>
 
-        <section class="containers section-equipe">
-
-            <div class="titulos_containers">
-                <h2>Nosso time ajudou <span>dezenas de jovens e adultos</span><br> a darem seus primeiros passos no mundo cibernético</h2>
-            </div>
+        <section class="containers bolsistas" id="bolsistas">
 
             <div class="box">
                 <div class="box-equipe">
@@ -218,55 +214,55 @@
                         <div class="equipe-fotos">
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="img/3.png" alt="Integrante 1">
+                                <img src="img/andry.jpg" alt="Integrante 1">
                                 </div>
                                 <h3 class="nome-integrante">Andryene Rodrigues</h3>
                             </div>
                             <div class="foto-container destaque">
                                 <div class="foto">
-                                <img src="img/8.png" alt="Integrante 2">
+                                <img src="img/carl.jpg" alt="Integrante 2">
                                 </div>
                                 <h3 class="nome-integrante">Carlos Henrique</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="img/6.png" alt="Integrante 3">
+                                <img src="img/glebson.jpg" alt="Integrante 3">
                                 </div>
                                 <h3 class="nome-integrante">Glébson Silva</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="img/9.png" alt="Integrante 1">
+                                <img src="img/jaquy.jpg" alt="Integrante 4">
                                 </div>
                                 <h3 class="nome-integrante">Jaquelyne Alves</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="img/4.png" alt="Integrante 3">
+                                <img src="img/julio.jpg" alt="Integrante 5">
                                 </div>
                                 <h3 class="nome-integrante">Júlio rasec</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="img/5.png" alt="Integrante 3">
+                                <img src="img/leo.jpg" alt="Integrante 6">
                             </div>
                             <h3 class="nome-integrante">Leonardo Felipe</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="img/2.png" alt="Integrante 3">
+                                <img src="img/rayane.jpg" alt="Integrante 7">
                                 </div>
                                 <h3 class="nome-integrante">Rayane Gomes</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="img/1.png" alt="Integrante 3">
+                                <img src="img/ruth.jpg" alt="Integrante 8">
                                 </div>
                                 <h3 class="nome-integrante">Ruth Pereira</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="img/7.png" alt="Integrante 9">
+                                <img src="img/valmir.jpg" alt="Integrante 9">
                                 </div>
                                 <h3 class="nome-integrante">Valmir Silva</h3>
                             </div>
@@ -277,18 +273,30 @@
                     </div>
                 </div>
 
-                <div class="descricao-equipe">
+                <div class="box-descricao-equipe">
 
+                    <div class="titulo-descricao-equipe">
+                        <h2>Nosso time ajudou <span>dezenas de jovens e adultos</span> a darem seus primeiros passos no mundo cibernético</h2>
+                    </div>
+
+                    <div class="conteudo-descricao-equipe">
+                        <div class="descricao-equipe">
+                            <h3>6</h3>
+                            <h4>Cidades diferentes</h4>
+                        </div>
+                        <div class="descricao-equipe">
+                            <h3>20+</h3>
+                            <h4>Alunos atingidos</h4>
+                        </div>
+                        <div class="descricao-equipe">
+                            <h3>10+</h3>
+                            <h4>Produtos produzidos</h4>
+                        </div>
+                    </div>
                 </div>
-
             </div>
+            <div class="bolsistas-saiba-mais">
 
-            <div class="barras-coloridas">
-                <span class="barra lilas"></span>
-                <span class="barra amarela"></span>
-                <span class="barra rosa"></span>
-                <span class="barra azul"></span>
-                <span class="barra roxa"></span>
             </div>
         </section>
 
