feat: div de saiba mais dos bolsistas

--- a/index.html
+++ b/index.html
@@ -295,9 +295,31 @@
                     </div>
                 </div>
             </div>
-            <div class="bolsistas-saiba-mais">
+            <div class="blocos-usuarios">
+                <div class="blocos-usuarios-container">
 
+                    <div class="usuarios-lista">
+                        <img src="img/andry.jpg" alt="">
+                        <img src="img/carl.jpg" alt="">
+                        <img src="img/glebson.jpg" alt="">
+                        <img src="img/jaquy.jpg" alt="">
+                        <img src="img/julio.jpg" alt="">
+                        <img src="img/rayane.jpg" alt="">
+                        <img src="img/ruth.jpg" alt="">
+                        <img src="img/leo.jpg" alt="">
+                        <img src="img/valmir.jpg" alt="">
+
+                        <div class="botao-mais"><i class="bi bi-mortarboard-fill"></i></div>
+                    </div>
+
+                    <div class="box-saiba-mais">
+                        <p class="texto-blocos">Explore o perfil dos nossos colaboradores. Cada um contribuiu com talento, dedicação e propósito para que o projeto continue crescendo. Acesse “Saiba mais”.</p>
+                        <a href="">saiba mais</a>
+                    </div>
+
+                </div>
             </div>
+
         </section>
 
 
