texto do box conteúdos

--- a/index.html
+++ b/index.html
@@ -125,8 +125,10 @@
             <div class="background-box">
                 
                 <div class="left-box">
-                    <h3>Lorem ipsum dolor sit amet consectetur!</h3>
-                    <h2>Lorem ipsum dolor sit</h2>
+                    <h2>Conteúdos das aulas</h2>
+                    <h3>Nosso projeto cobriu uma variedade de assuntos essenciais para a inclusão digital.</h3>
+                    <h3>Confira a lista completa dos tópicos apresentados:</h3>
+                    <br>
                     <div class="features">
                         <ul>
                             <li>Hardware e software</li>
@@ -147,7 +149,9 @@
                 <div class="right-box">
                     <h1>Conteúdos gerados</h1>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima quibusdam a deleniti, impedit asperiores quos, quod ex mollitia ipsum hic doloremque recusandae doloribus, nesciunt harum provident reiciendis animi non totam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, sapiente consectetur voluptate, libero aliquid autem distinctio aliquam sit, obcaecati nam commodi reprehenderit. Eum laboriosam ratione, aperiam deleniti possimus deserunt doloribus.
+                        Como resultado do nosso projeto, produzimos diversos materiais de apoio que você pode acessar logo abaixo.
+                    <br>
+                        Disponibilizamos o Relatório final com a metodologia e nossos resultados, a Música que criamos durante o processo, e a Apostila completa com o resumo de todos os tópicos abordados. Sinta-se à vontade para explorar.
                     </p>
                     <div class="box-buttons">
                         <a href="pages/artigo_relatorio.html" class="btn btn3">Relatório</a>
