ajuste do box conteúdos

--- a/index.html
+++ b/index.html
@@ -147,11 +147,10 @@
                     </div>
                 </div>
                 <div class="right-box">
+                <br><br><br><br>
                     <h1>Conteúdos gerados</h1>
                     <p>
-                        Como resultado do nosso projeto, produzimos diversos materiais de apoio que você pode acessar logo abaixo.
-                    <br>
-                        Disponibilizamos o Relatório final com a metodologia e nossos resultados, a Música que criamos durante o processo, e a Apostila completa com o resumo de todos os tópicos abordados. Sinta-se à vontade para explorar.
+                        Como resultado do nosso projeto, produzimos diversos materiais que você pode acessar logo abaixo:
                     </p>
                     <div class="box-buttons">
                         <a href="pages/artigo_relatorio.html" class="btn btn3">Relatório</a>
@@ -160,6 +159,10 @@
 
                         <a href="utils/pdfs/apostila_inclusao_digital.pdf" download="apostila_inclusao_digital.pdf" class="btn btn1">Apostila <i class="bi bi-download"></i></a>
                     </div>
+                    <br><br>
+                    <p>
+                        Disponibilizamos o Relatório final com a metodologia e nossos resultados, a Música que criamos durante o processo, e a Apostila completa com o resumo de todos os tópicos abordados. Sinta-se à vontade para explorar.
+                    </p>
                 </div>
             </div>
         </section>
