resolvendo problema da seção bolsistas

--- a/pages/projeto_que_brilhou.html
+++ b/pages/projeto_que_brilhou.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/artigos.css">
-  <title>O Projeto Que Brilhou</title>
+  <title>O Projeto que brilhou</title>
 </head>
 <body>
   <header>
@@ -18,16 +18,16 @@
   <main class="artigo-principal-section">
  
     <div class="artigo-principal-cabecalho">
-      <h1 class="artigo-principal-titulo">O Projeto Que Brilhou</h1>
+      <h1 class="artigo-principal-titulo">O Projeto que brilhou</h1>
 
       <p class="artigo-principal-subtitulo">
         O projeto <strong>“Aplicabilidade de Ferramentas Digitais”</strong> teve como objetivo promover a <strong>inclusão digital</strong> e o <strong>desenvolvimento de habilidades tecnológicas</strong> entre jovens e adultos da comunidade atendida pela Biblioteca Júlio Santiago, no <strong>COMPAZ Miguel Arraes</strong>.
       </p>
 
       <div class="artigo-principal-info">
-        <span>Publicado em: <strong>13 de novembro de 2025</strong></span>
-        <span><i class="bi bi-stopwatch"></i> Leitura: <strong>8 minutos</strong></span>
-        <span>Por: <strong>Equipe ETEPAC</strong></span>
+        <span>Atualizado em: <strong>13 de novembro de 2025</strong></span>
+        <span><i class="bi bi-stopwatch"></i> Tempo de leitura: <strong>8 minutos</strong></span>
+        <span>Escrito por: <strong>Equipe ETEPAC</strong></span>
       </div>
 
       <div class="artigo-principal-audio">
@@ -43,18 +43,12 @@
 
     <div class="artigo-principal-corpo">
 
-      <section class="bloco destaque">
-        <h2>🌟 O Propósito do Projeto</h2>
+        <h2>O propósito do Projeto</h2>
         <p>
-          O projeto <strong>“Aplicabilidade de Ferramentas Digitais”</strong>, desenvolvido por estudantes em EAD da <strong>Escola Técnica Professor Antônio Carlos Gomes da Costa (ETEPAC)</strong>, uniu educação e tecnologia para transformar realidades.
-        </p>
-        <p>
-          Aplicado como extensão junto aos usuários da <strong>Biblioteca Júlio Santiago</strong>, no <strong>COMPAZ Miguel Arraes</strong>, teve como foco oferecer <strong>conhecimento prático</strong> e <strong>inclusão digital</strong> a jovens e adultos.
+          O projeto “<strong>Aplicabilidade de Ferramentas Digitais</strong>”, desenvolvido por estudantes em EAD, dos cursos de Administração, Design Gráfico, Logística, Tradução e Interpretação de LIBRAS e Desenvolvimento de Sistemas da <strong>Escola Técnica Professor Antônio Carlos Gomes da Costa</strong> – ETEPAC, foi aplicado como extensão para os usuários da biblioteca <strong>Júlio Santiago</strong>, que funciona no <strong>COMPAZ Miguel Arraes</strong>, um parceiro de suma importância deste projeto. Teve como objetivo principal promover a <strong>inclusão digital</strong> e o <strong>desenvolvimento de habilidades tecnológicas</strong> entre jovens e adultos da comunidade do bairro onde está localizada essa Instituição, que foi criada pela Prefeitura do Recife e é uma iniciativa de primordial importância para a comunidade.
         </p>
         <img src="../img/participantes_em_atividade.jpeg" alt="Participantes do projeto em atividade" class="imagem-centro sombra">
-      </section>
 
-      <section class="bloco">
         <h2>🤝 Parceria ETEPAC + COMPAZ</h2>
         <p>
           A iniciativa foi possível graças à colaboração entre duas instituições comprometidas com a <strong>educação e o desenvolvimento social</strong>: a ETEPAC, referência em ensino técnico à distância, e o COMPAZ, símbolo de cidadania e convivência comunitária.
@@ -63,9 +57,7 @@
           Essa união demonstrou o poder da <strong>educação aplicada</strong> e da <strong>responsabilidade social</strong> em promover transformação e oportunidade.
         </p>
         <img src="../img/parceria_etepac_compaz.jpg" alt="Equipe ETEPAC e comunidade no COMPAZ" class="imagem-centro borda-suave">
-      </section>
 
-      <section class="bloco destaque">
         <h2>🎓 Quem Fez Parte?</h2>
         <p>
           O projeto contou com <strong>nove bolsistas</strong> dos cursos de:
@@ -81,9 +73,7 @@
           Essa diversidade fortaleceu a interdisciplinaridade — um dos grandes diferenciais do projeto — permitindo que diferentes perspectivas se unissem em torno de um único propósito: <strong>ensinar para transformar</strong>.
         </p>
         <img src="../img/bolsistas_trabalho.jpg" alt="Bolsistas trabalhando no projeto" class="imagem-centro sombra">
-      </section>
 
-      <section class="bloco">
         <h2>📈 Resultados e Aprendizados</h2>
         <p>
           A troca de experiências entre bolsistas e alunos foi enriquecedora. Durante o curso, observou-se um <strong>crescimento mútuo</strong> — tanto dos estudantes instrutores quanto dos participantes do COMPAZ.
@@ -102,7 +92,6 @@
   <img src="../img/grafico_genero.png" alt="Gráfico de gênero" style="width: 420px; border-radius: 14px;">
   <img src="../img/grafico_idade.png" alt="Gráfico de faixa etária" style="width: 420px; border-radius: 14px;">
 </div>
-      <section class="bloco destaque">
         <h2>💻 Um Novo Horizonte</h2>
         <p>
           O projeto proporcionou uma <strong>trilha de aprendizado contínuo</strong>, abordando desde conceitos básicos até temas modernos como <strong>Inteligência Artificial</strong> e <strong>Internet das Coisas (IoT)</strong>.
@@ -111,7 +100,6 @@
           Essa abordagem formou cidadãos mais preparados para o futuro digital, capazes de aplicar o conhecimento adquirido tanto em suas <strong>vidas profissionais</strong> quanto em <strong>atividades cotidianas</strong>.
         </p>
         <img src="../img/aula_em_andamento.jpeg" alt="Aula de inclusão digital em andamento" class="imagem-centro sombra">
-      </section>
      </div>
   </main>
 </body>
