finalização das sub paginas

--- a/pages/parceria_etepac_compaz.html
+++ b/pages/parceria_etepac_compaz.html
@@ -41,7 +41,7 @@
 
     <div class="artigo-principal-corpo">
       <section class="bloco destaque">
-        <h2>📘 Uma Conexão Entre Escola e Comunidade</h2>
+        <h2> Uma Conexão Entre Escola e Comunidade</h2>
         <p>
           A <strong>ETEPAC</strong> e o <strong>COMPAZ Miguel Arraes</strong> se uniram com o propósito de levar a tecnologia para onde ela é mais necessária: o coração das comunidades.  
           Essa parceria resultou em uma ponte entre o conhecimento técnico e o desenvolvimento humano, promovendo inclusão digital e oportunidades reais de aprendizado.
@@ -50,16 +50,16 @@
       </section>
 
       <section class="bloco">
-        <h2>🏛️ O Papel do COMPAZ</h2>
+        <h2> O Papel do COMPAZ</h2>
         <p>
           O <strong>COMPAZ Miguel Arraes</strong>, referência em cidadania e convivência, foi palco para as atividades do projeto “Aplicabilidade de Ferramentas Digitais”.  
           Com salas equipadas e um ambiente acolhedor, o espaço tornou-se o elo entre os bolsistas da ETEPAC e os moradores, que puderam vivenciar a tecnologia como instrumento de transformação.
         </p>
-        <img src="../img/compaz_equipamento.jpeg" alt="Interior do COMPAZ durante o projeto" class="imagem-centro sombra">
+        <img src="../img/compaz_equipamento.jpeg" alt="Interior do COMPAZ durante o projeto" class="imagem-centro sombra" style="width:80%">
       </section>
 
       <section class="bloco destaque">
-        <h2>🧭 Planejamento e Logística</h2>
+        <h2> Planejamento e Logística</h2>
         <p>
           Antes do início das aulas, a coordenação da ETEPAC realizou <strong>duas visitas técnicas</strong> ao COMPAZ para verificar a estrutura, alinhar cronogramas e planejar a execução.  
           Cada detalhe foi pensado: desde os horários das turmas até a melhor forma de adaptar o conteúdo ao público local.
@@ -73,26 +73,26 @@
       </section>
 
       <section class="bloco">
-        <h2>💡 Impacto e Transformação Social</h2>
+        <h2> Impacto e Transformação Social</h2>
         <p>
           O projeto não se limitou ao ensino técnico — ele despertou nos participantes o sentimento de pertencimento e autoconfiança.  
           Jovens e adultos descobriram o poder da tecnologia aplicada à vida real: desde criar um currículo até compreender o funcionamento das redes digitais.
         </p>
-        <img src="../img/participantes_do_curso.png" alt="Participantes do curso de inclusão digital" class="imagem-centro borda-suave">
+        <img src="../img/participantes_do_curso.png" alt="Participantes do curso de inclusão digital" class="imagem-centro borda-suave" >
       </section>
 
       <section class="bloco destaque">
-        <h2>👩‍🏫 Envolvimento dos Bolsistas</h2>
+        <h2> Envolvimento dos Bolsistas</h2>
         <p>
           A equipe de bolsistas da ETEPAC foi essencial para o sucesso do projeto.  
           Eles aplicaram seus conhecimentos técnicos, aprimoraram habilidades de comunicação e vivenciaram a prática da docência.  
           O aprendizado foi mútuo: enquanto ensinavam, também se transformavam.
         </p>
-        <img src="../img/bolsistas_dando_aula.jpeg" alt="Bolsistas ETEPAC ministrando aulas" class="imagem-centro sombra">
+        <img src="../img/bolsistas_dando_aula.jpeg" alt="Bolsistas ETEPAC ministrando aulas" class="imagem-centro sombra" >
       </section>
 
       <section class="bloco">
-        <h2>🌱 Legado e Continuidade</h2>
+        <h2> Legado e Continuidade</h2>
         <p>
           A parceria entre a <strong>ETEPAC</strong> e o <strong>COMPAZ</strong> deixou um legado duradouro.  
           O projeto ampliou horizontes, abriu caminhos e demonstrou que a inclusão digital é, acima de tudo, uma ferramenta de transformação social.
@@ -103,7 +103,7 @@
       </section>
 
       <section class="bloco final">
-        <h2>✨ Conclusão</h2>
+        <h2> Conclusão</h2>
         <p>
           A experiência da parceria entre a ETEPAC e o COMPAZ Miguel Arraes prova que quando a educação técnica encontra o compromisso social, o resultado é uma sociedade mais justa, consciente e conectada.  
           Uma verdadeira união entre conhecimento, empatia e propósito.
