--- a/pages/projeto_que_brilhou.html
+++ b/pages/projeto_que_brilhou.html
@@ -47,9 +47,9 @@
         <p>
           O projeto “<strong>Aplicabilidade de Ferramentas Digitais</strong>”, desenvolvido por estudantes em EAD, dos cursos de Administração, Design Gráfico, Logística, Tradução e Interpretação de LIBRAS e Desenvolvimento de Sistemas da <strong>Escola Técnica Professor Antônio Carlos Gomes da Costa</strong> – ETEPAC, foi aplicado como extensão para os usuários da biblioteca <strong>Júlio Santiago</strong>, que funciona no <strong>COMPAZ Miguel Arraes</strong>, um parceiro de suma importância deste projeto. Teve como objetivo principal promover a <strong>inclusão digital</strong> e o <strong>desenvolvimento de habilidades tecnológicas</strong> entre jovens e adultos da comunidade do bairro onde está localizada essa Instituição, que foi criada pela Prefeitura do Recife e é uma iniciativa de primordial importância para a comunidade.
         </p>
-        <img src="../img/participantes_em_atividade.jpeg" alt="Participantes do projeto em atividade" class="imagem-centro sombra">
+        <img src="../img/participantes_em_atividade.jpeg" alt="Participantes do projeto em atividade" class="imagem-centro sombra" style="width:65%">
 
-        <h2>🤝 Parceria ETEPAC + COMPAZ</h2>
+        <h2> Parceria ETEPAC + COMPAZ</h2>
         <p>
           A iniciativa foi possível graças à colaboração entre duas instituições comprometidas com a <strong>educação e o desenvolvimento social</strong>: a ETEPAC, referência em ensino técnico à distância, e o COMPAZ, símbolo de cidadania e convivência comunitária.
         </p>
@@ -58,7 +58,7 @@
         </p>
         <img src="../img/parceria_etepac_compaz.jpg" alt="Equipe ETEPAC e comunidade no COMPAZ" class="imagem-centro borda-suave">
 
-        <h2>🎓 Quem Fez Parte?</h2>
+        <h2> Quem Fez Parte?</h2>
         <p>
           O projeto contou com <strong>nove bolsistas</strong> dos cursos de:
         </p>
@@ -74,7 +74,7 @@
         </p>
         <img src="../img/bolsistas_trabalho.jpg" alt="Bolsistas trabalhando no projeto" class="imagem-centro sombra">
 
-        <h2>📈 Resultados e Aprendizados</h2>
+        <h2> Resultados e Aprendizados</h2>
         <p>
           A troca de experiências entre bolsistas e alunos foi enriquecedora. Durante o curso, observou-se um <strong>crescimento mútuo</strong> — tanto dos estudantes instrutores quanto dos participantes do COMPAZ.
         </p>
@@ -89,10 +89,9 @@
           A classificação etária também demonstrou a <strong>diversidade de faixas etárias</strong> e perfis interessados em aprimorar habilidades digitais.
         </p>
  <div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; margin: 30px 0;">
-  <img src="../img/grafico_genero.png" alt="Gráfico de gênero" style="width: 420px; border-radius: 14px;">
-  <img src="../img/grafico_idade.png" alt="Gráfico de faixa etária" style="width: 420px; border-radius: 14px;">
+  <img src="../img/grafico_genero.png" alt="Gráfico de gênero" style="width: 440px; border-radius: 14px;">
 </div>
-        <h2>💻 Um Novo Horizonte</h2>
+        <h2> Um Novo Horizonte</h2>
         <p>
           O projeto proporcionou uma <strong>trilha de aprendizado contínuo</strong>, abordando desde conceitos básicos até temas modernos como <strong>Inteligência Artificial</strong> e <strong>Internet das Coisas (IoT)</strong>.
         </p>
