refactor: textos da secao de conteudos gerados

--- a/index.html
+++ b/index.html
@@ -125,10 +125,9 @@
             <div class="background-box">
                 
                 <div class="left-box">
-                    <h2>Conteúdos das aulas</h2>
-                    <h3>Nosso projeto cobriu uma variedade de assuntos essenciais para a inclusão digital.</h3>
-                    <h3>Confira a lista completa dos tópicos apresentados:</h3>
-                    <br>
+                    <h3>Aulas estruturadas para desenvolver competências tecnológicas <br> relevantes para o mercado de trabalho.</h3>
+                    <h2>Conhecimentos explorados</h2>
+
                     <div class="features">
                         <ul>
                             <li>Hardware e software</li>
@@ -149,7 +148,7 @@
                 <div class="right-box">
                     <h1>Conteúdos gerados</h1>
                     <p>
-                        Como resultado do nosso projeto, produzimos diversos materiais que você pode acessar logo abaixo:
+                        Criamos materiais especiais para enriquecer a experiência dos participantes. A apostila oficial, utilizada nas aulas e disponibilizada tanto fisicamente quanto em PDF, reúne todos os conteúdos aplicados. A música tema, composta exclusivamente para o projeto, apresenta de forma leve tudo o que foi vivenciado pelos alunos. Já o relatório final, detalha cada etapa, metodologia e resultados alcançados ao longo do processo. Explore cada conteúdo que marcaram nossa jornada:
                     </p>
                     <div class="box-buttons">
                         <a href="pages/artigo_relatorio.html" class="btn btn3">Relatório</a>
@@ -158,9 +157,6 @@
 
                         <a href="utils/pdfs/apostila_inclusao_digital.pdf" download="apostila_inclusao_digital.pdf" class="btn btn1">Apostila <i class="bi bi-download"></i></a>
                     </div>
-                    <p>
-                        Disponibilizamos o Relatório final com a metodologia e nossos resultados, a Música que criamos durante o processo, e a Apostila completa com o resumo de todos os tópicos abordados. Sinta-se à vontade para explorar.
-                    </p>
                 </div>
             </div>
         </section>
